PyMaker/datas/object2/RawHTML/i13301/Python_DOC_referPages.proper-use-of-sep-in-print.txt
<div class="post-text" itemprop="text">
<p>I am new at python, and I am having problems with the use of sep=.
What I want to do is to not have a space between the number <code>25</code> and the <code>.</code></p>
<p>Here is my code and the error I get. I am running this code on MAC OSX El Capitan's Terminal.</p>
<p>code:</p>
<pre><code>side = 5
area = side * side
print "The area of a square with side ",side,"is ",area,".",sep=" " 
</code></pre>
<p>Output:</p>
<pre><code>print "The area of a square with side ",side,"is ",area,".",sep=" "

                                                               ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><code>sep</code> is an argument to the <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print()</code> <em>function</em></a>, which requires you use Python 3 or use a special <code>from __future__ import print_function</code> statement in Python 2 (see the <a href="https://docs.python.org/2/library/functions.html#print" rel="nofollow"><code>print()</code> function documentation</a>.</p>
<p>The normal plain vanilla <a href="https://docs.python.org/2/reference/simple_stmts.html#the-print-statement" rel="nofollow">Python 2 <code>print</code> <em>statement</em></a> (which is what you appear to be using) does not support altering the separator used.</p>
<p>Since the separator is <em>always</em> a space, you don't need to specify it here at all:</p>
<pre><code>print "The area of a square with side ", side, "is ", area, "."
</code></pre>
<p>If you wanted to print <em>without</em> spaces, use string formatting instead:</p>
<pre><code>print "The area of a square with side {} is {}.".format(side, area)
</code></pre>
<p>If you are using a Python 3 tutorial using <code>print(foo, bar, baz sep='')</code> or similar similar syntax, get yourself Python 3 installed, or get yourself a Python 2 specific tutorial instead.</p>
</div>
<div class="post-text" itemprop="text">
<p>In <code>python 2.x</code> print doesn't take arguments because <strong><em>print is a statement</em></strong> and <strong><em>not a function</em></strong>. </p>
<p>You can use the <code>print()</code> function by importing from the <code>future</code> module:</p>
<pre><code>from __future__ import print_function
</code></pre>
<p>As the first import of your <code>.py</code> file.</p>
<p>And then <strong><em>call</em></strong> print (don't omit the parentheses!):</p>
<pre><code># This call is valid by default for Python 3.x
# It is also valid for Python 2 if you import the print_function
print ("The area of a square with side", side, "is", area, ".", sep=" ")
</code></pre>
<hr/>
<p>Alternatively, <code>Python 2</code> spacing can be added explicitly by adding it in the string to be printed along with the <code>+</code> operator that combines strings:</p>
<pre><code># wrap int objects in str() to convert them to strings.
print "The area of a square with side " + str(side) + " is " + str(area) + "." 
</code></pre>
<hr/>
<p>Check your python version (by running <code>python -V</code> in your terminal) and <em>read the right docs</em> (<a href="https://docs.python.org/2/" rel="nofollow">Python 2</a>, <a href="https://docs.python.org/3/" rel="nofollow">Python 3</a>)</p>
</div>
<span class="comment-copy">what python version is it?</span>
<span class="comment-copy">It is python 2.7.10</span>
<span class="comment-copy">Thank you, for your help! It work!</span>
<span class="comment-copy">Thank you for your answer. I checked my version and it's Python 2</span>
<span class="comment-copy">You're welcome, Daniel. Accept either Martjins or my answer by pressing the 'tick' symbol to indicate to other users that your issue has been solved.</span>
